--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyEverest">
-        <activity android:name=".Login"></activity>
-        <activity android:name=".Register" />
         <activity
-            android:name=".ui.login.LoginActivity"
-            android:label="@string/title_activity_login" />
+            android:name=".Friends"
+            android:label="@string/title_activity_friends"
+            android:theme="@style/Theme.MyEverest.NoActionBar"></activity>
+        <activity android:name=".Login" />
+        <activity android:name=".Register" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
