--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyEverest">
-        <activity android:name=".challenges.MapsActivity"></activity>
+        <activity android:name=".challenges.WalkingChallenge"></activity>
+        <activity android:name=".challenges.MapsActivity" />
         <activity android:name=".MainActivity2" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
