--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         <activity android:name=".challenges.WalkingChallenge"></activity>
         <activity android:name=".challenges.MapsActivity" />
         <activity android:name=".MainActivity2" />
+        <activity android:name=".Account" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
