--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyEverest">
-        <activity android:name=".ui.StartingActivity" android:theme="@android:style/Theme.NoDisplay">
+        <activity android:name=".userlist"></activity>
+        <activity android:name=".Insta">
+        </activity>
+        <activity
+            android:name=".ui.StartingActivity"
+            android:theme="@android:style/Theme.NoDisplay">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
