--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,7 +43,7 @@
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_key" />
+            android:value="AIzaSyA2-sp8wGATBV6ICa70S6QsYEVu-K7TIpA" />
 
         <activity
             android:name=".ui.StartingActivity"
