--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -69,6 +69,7 @@
         <activity android:name=".User.Register" />
         <activity
             android:name=".MainActivity"
+            android:windowSoftInputMode="adjustNothing"
             android:label="@string/app_name"
             android:theme="@style/Theme.MyEverest.NoActionBar">
             <intent-filter>
